# sword

./: .gitmodules  CMakeLists.txt  Makefile  README.md
src/: ac_automaton.cpp  ac_automaton.h  candidate.cpp  candidate.h  chain.cpp  chain.hpp  database_alignment.cpp  database_alignment.hpp  database_heuristics.cpp  database_heuristics.h  database_search.cpp  database_search.hpp  evalue.cpp  evalue.hpp  hash.cpp  hash.hpp  kmers.cpp  kmers.hpp  main.c  main.cpp  reader.cpp  score_matrix.cpp  score_matrix.hpp  thread_pool.cpp  thread_pool.hpp  timer.cpp  timer.h  utils.cpp  utils.h  utils.hpp  writer.cpp  writer.hpp
